Updated gradle to use javafx