@@ -1,5 +1,7 @@
 plugins {
-    application
+    id("java")
+    id("application")
+    id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 repositories {
@@ -11,12 +13,16 @@ dependencies {
     testImplementation(libs.junit.jupiter)
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
-    // This dependency is used by the application.
-    implementation(libs.guava)
-
     // Add Mockito for testing
     testImplementation("org.mockito:mockito-core:5.4.0")
     testImplementation("org.mockito:mockito-junit-jupiter:5.4.0")
+
+    // This dependency is used by the application.
+    implementation(libs.guava)
+
+    // Add JavaFX dependencies
+    implementation("org.openjfx:javafx-controls:21")
+    implementation("org.openjfx:javafx-fxml:21")
 }
 
 java {
@@ -26,9 +32,22 @@ java {
 }
 
 application {
-    mainClass = "org.example.App"
+    mainClass.set("org.livetiming.Main")
+}
+
+javafx {
+    version = "23.0.2"
+    modules("javafx.controls", "javafx.fxml")
 }
 
 tasks.named<Test>("test") {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage")
+}
+
+tasks.named<JavaExec>("run") {
+    jvmArgs = listOf(
+        "--module-path", configurations.runtimeClasspath.get().asPath,
+        "--add-modules", "javafx.controls,javafx.fxml"
+    )
 }
